// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component should render correctly 1`] = `
<div>
  <div
    class="modal hide"
    data-testid="modal"
  />
</div>
`;

exports[`NavBar component should render correctly 1`] = `
<div>
  <ul
    id="navBar"
  >
    <li>
      <a
        href="/"
      >
        <img
          id="logo-image"
          src="../icons/logo2.png"
        />
        <span
          id="logo-text"
        >
          Brew Day!
        </span>
      </a>
    </li>
    <li>
      <a
        href="/ricette"
      >
        Ricette
      </a>
    </li>
    <li>
      <a
        href="/birre"
      >
        Birre
      </a>
    </li>
    <li>
      <a
        href="/inventario"
      >
        Inventario
      </a>
    </li>
    <li>
      <a
        href="/spesa"
      >
        Spesa
      </a>
    </li>
  </ul>
</div>
`;

exports[`QuantityInput component should render correctly 1`] = `
<div>
  <input
    data-testid="quantity-input"
    id="shoppingItemId"
    name="shoppingItemId"
    value=""
  />
</div>
`;

exports[`RecipeDelete component should render correctly 1`] = `
<div>
  <h1>
    name
  </h1>
  <p>
    description
  </p>
  <button
    class="recipeButton"
  >
    Sei sicuro di voler rimuovere la ricetta?
  </button>
</div>
`;

exports[`RecipeExecute component should render correctly 1`] = `
<div>
  <div>
    <center>
      <h1>
         
        name
      </h1>
      <p>
         
        description
         
      </p>
      <table
        class="myTable"
      >
        <thead>
          <tr>
            <th
              width="25%"
            >
              Immagine
            </th>
            <th
              width="25%"
            >
              Nome
            </th>
            <th
              width="25%"
            >
              Quantità
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <img
                class="shoppingImage"
                src="../../icons/inventory-icons/name.png"
              />
            </td>
            <td>
              name
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              <img
                class="shoppingImage"
                src="../../icons/inventory-icons/luppoli.png"
              />
            </td>
            <td>
              luppoli
            </td>
            <td>
              1
            </td>
          </tr>
        </tbody>
      </table>
    </center>
  </div>
  <button
    class="recipeButton"
  >
    Sei sicuro di voler eseguire la ricetta?
  </button>
</div>
`;

exports[`RecipeView component should render correctly 1`] = `
<div>
  <center>
    <h1>
       
      name
    </h1>
    <p>
       
      description
       
    </p>
    <table
      class="myTable"
    >
      <thead>
        <tr>
          <th
            width="25%"
          >
            Immagine
          </th>
          <th
            width="25%"
          >
            Nome
          </th>
          <th
            width="25%"
          >
            Quantità
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <img
              class="shoppingImage"
              src="../../icons/inventory-icons/name.png"
            />
          </td>
          <td>
            name
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            <img
              class="shoppingImage"
              src="../../icons/inventory-icons/luppoli.png"
            />
          </td>
          <td>
            luppoli
          </td>
          <td>
            1
          </td>
        </tr>
      </tbody>
    </table>
  </center>
</div>
`;
